# palette

./: Cargo.toml  README.md
src/: collection.rs  color.rs  main.rs  palette.rs  palette_file.rs
