[package]
name = "palette-cli"
version = "0.2.6"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
description = "A simple CLI tool to visualize color palettes."
repository = "https://github.com/OJarrisonn/palette"
authors = ["OJarrisonn <jhmtv10@gmail.com>"]
categories = ["command-line-utilities"]
keywords = ["palette", "color", "cli", "graphics", "visualization"]
exclude = ["assets/*", "target/*", "Cargo.lock"]
rust-version = "1.80.0"

[[bin]]
name = "pal"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
colored = "2.1.0"
nu-protocol = "0.98.0"
nuon = "0.98.0"
serde_json = "1.0.128"
toml = "0.8.19"
yaml-rust2 = "0.9.0"
